CloudFormation/Launch-template.yml
Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      -
        Label:
          default: "EC2 Settings"
        Parameters:
          - Vpc
          - Subnet
Parameters:
  Vpc:
    Type: AWS::EC2::VPC::Id
  Subnet:
    Type: AWS::EC2::Subnet::Id
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
    - t1.micro
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
Mappings:
  RegionMap:
    eu-north-1:
      ami: ami-0eb3006e49308f9d6
    ap-south-1:
      ami: ami-0675118d2eaeabbc7
    eu-west-3:
      ami: ami-0513af4e9a884a24a
    eu-west-2:
      ami: ami-073ee45c9f61cbaa3
    eu-west-1:
      ami: ami-0f93e856d36a101f8
    ap-northeast-3:
      ami: ami-087c3a2258b97a89e
    ap-northeast-2:
      ami: ami-08597df434c0ea272
    ap-northeast-1:
      ami: ami-09bba7f9d4df930e6
    sa-east-1:
      ami: ami-0e11f70e207b7e5a9
    ca-central-1:
      ami: ami-073c944d45ffb4f27
    ap-southeast-1:
      ami: ami-0bd6906508e74f692
    ap-southeast-2:
      ami: ami-0d539270873f66397
    eu-central-1:
      ami: ami-02584c1c9d05efa69
    us-east-1:
      ami: ami-0c4f7023847b90238
    us-east-2:
      ami: ami-0eea504f45ef7a8f7
    us-west-1:
      ami: ami-0487b1fe60c1fd1a2
    us-west-2:
      ami: ami-0cb4e786f15603b0d
Resources:  
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EC2_IP
  MySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow SSH and HTTP access'
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'
        - IpProtocol: 'tcp'
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
      VpcId:
        Ref: Vpc
  MyLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId:
          Fn::FindInMap:
            - RegionMap
            - Ref: AWS::Region
            - ami         # Ubuntu 18.04 LTS
        InstanceType: 
          Ref: InstanceType
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            sudo apt update
            sudo apt install nginx -y 
            sudo systemctl start nginx
        KeyName: test
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeviceIndex: 0
            SubnetId: 
              Ref: Subnet # ID of the existing VPC subnet
            Groups: 
              - Ref: MySecurityGroup # ID of the existing security group
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref MyLaunchTemplate
        Version: '1'
  MyEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId:
        Ref: MyInstance
      EIP:
        Ref: EIP
